Fix copyright headers and imports